<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"


    tools:context=".main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginU"
            android:layout_marginStart="25dp"
            android:id="@+id/currentStateTextMain"
            android:textSize="35sp"
            android:textColor="#4C4B4B"
            android:fontFamily="@font/didact_gothic"
            />



    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/double_tap_login_to_signup"
        android:layout_marginStart="27dp"
        android:layout_gravity="bottom"
        android:id="@+id/currentStateTextSecondary"
        android:fontFamily="@font/didact_gothic"
        />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittextdesign"
        android:fontFamily="@font/didact_gothic"
        android:hint="@string/email_address"
        android:padding="20dp"
        android:inputType="textEmailAddress"
        android:autofillHints="" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:padding="20dp"
        android:background="@drawable/edittextdesign"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/loginPassword"
        android:inputType="textPassword"
        android:fontFamily="@font/didact_gothic"
        android:autofillHints="" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttondesing"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_as_guest"
        android:id="@+id/continueOffline"
        android:fontFamily="@font/didact_gothic"
        />



</LinearLayout>