<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".menu.fragments.HomeFragment">
    <ProgressBar
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:id="@+id/progressBar"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edittextdesign"
            android:fontFamily="@font/didact_gothic"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:layout_gravity="center"
            android:drawableEnd="@drawable/search"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:autofillHints="">

        </EditText>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="30dp"
                android:id="@+id/posterPic"
                android:background="@drawable/imagedes"
                android:contentDescription="@string/todo" />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="bottom|center"
                android:backgroundTint="@color/white"
                app:borderWidth="0dp"
                android:src="@drawable/play"
                app:fabCustomSize="50dp"
                android:id="@+id/openTrailer"
                android:contentDescription="@string/todo" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular"
            android:textSize="25sp"
            android:fontFamily="@font/didact_gothic"
            android:layout_marginTop="-5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="15dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:id="@+id/recViewPopularMovies"
            android:orientation="horizontal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_playing"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/didact_gothic"
            android:textSize="25sp"
            android:layout_marginStart="15dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:orientation="horizontal"
            android:id="@+id/recyclerViewNowPlaying"
            />

    </LinearLayout>
    </ScrollView>

</FrameLayout>