<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ProgressBar
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:id="@+id/progress_bar"
        />


    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".actordetails.ActorActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="555dp"
            android:orientation="vertical"
            android:background="#ead5dc"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="555dp"
                android:background="@drawable/left_bottom_corner"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="320dp"
                    android:layout_height="470dp"
                    android:layout_gravity="center"
                    android:id="@+id/actorImageDetails"
                    android:contentDescription="@string/todo"/>

                <TextView
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/actorNameDetails"
                    android:gravity="center"
                    android:padding="5dp"
                    android:elevation="2dp"
                    android:layout_marginTop="-12dp"
                    android:background="@drawable/actor_name_des"
                    android:layout_gravity="center"
                    android:textSize="25sp"
                    android:fontFamily="@font/didact_gothic"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/actorDetailsPlaceOfBirth"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:textSize="20sp"
                    android:fontFamily="@font/didact_gothic"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:orientation="vertical"
            android:background="@drawable/right_top_corner"
            android:backgroundTint="#ead5dc"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_roles"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/didact_gothic"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:textSize="23sp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:id="@+id/creditRecView"
                android:orientation="horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ead5dc"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/right_top_solo"
                android:backgroundTint="@color/white"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/biograpgy"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/didact_gothic"
                    android:layout_marginStart="15dp"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:textSize="15sp"
                    android:id="@+id/actorBiographyDetails"
                    android:layout_width="wrap_content"
                    android:justificationMode="inter_word"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/didact_gothic"
                    android:layout_marginBottom="20dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/add_to_favorites"
            android:fontFamily="@font/didact_gothic"
            android:background="@drawable/addtofav_design"
            android:id="@+id/addActorToFav"
            />
    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
